CHANGES IN VERSION 0.1.79 (2012-08-08)

  o removed data/ directory, moved rda files in beta.datavaalit.fi/storage/louhos

CHANGES IN VERSION 0.1.73 (2012-07-09)

  o Removed several dependencies and made them marginal (see wiki for description)

CHANGES IN VERSION 0.1.71 (2012-05-12)

  o GetMunicipalityInfo modified 
  o added ConvertMunicipalityNames function
  o added GetParliamentaryElectionData function
  o GetMunicipalityInfoMML 
  o GetMunicipalityInfoStatFi
  o elections*.R functions added for datavaalit

CHANGES IN VERSION 0.1.59 (2012-03-10)

  o Added functions GetOmakaupunki, GetPalvelukartta, GetThemeMap
  o Joined files googlemaps.R and OpenStreetMap.R to file maps.R

CHANGES IN VERSION 0.1.58 (2012-03-06)

  o XML removed from dependencies

CHANGES IN VERSION 0.1.57 (2012-02-28)

  o added Seutukunta in MML data (via bug fix in GetShapeMML)
  o spdep added to dependencies (required by GenerateMapColours)
  o added function GenerateMapColours

CHANGES IN VERSION 0.1.55 (2012-02-26)

  o GetMunicipalityInfo function updated: now retrieving comprehensive 
    municipality-level information from Tilastokeskus and 
    Maanmittauslaitos into a single table
  o Added options to PlotShape function
  
CHANGES IN VERSION 0.1.54 (2012-02-26)

 o Added loaders.R (for loading external data into .rda-files)
 o HKK.R (including GetHKK) rewritten, major changes:
  - XLConnect no longer required
  - GetHKK returns a single SpatialPolygonsDataFrame instead a list of them
  - new function SplitSpatial splits a Spatial*DataFrame object into a list 
    of individual objects based on a splitter field
 o Updated presidentti2012_PKS_20120201.R to reflect changes in HKK.R

CHANGES IN VERSION 0.1.53 (2012-02-26)
 o replaced RBGL with RColorBrewer in dependencies

CHANGES IN VERSION 0.1.51 (2012-02-26)

  o replaced RBGL with RColorBrewer in dependencies

CHANGES IN VERSION 0.1.50 (2012-02-23)

 o added stringOperations.R (Strip function)
 