@@ -1,6 +1,7 @@
 CHANGES IN VERSION 0.1.79 (2012-08-08)
 
-  o removed data/ directory, moved rda files in beta.datavaalit.fi/storage/louhos
+  o removed data/ directory, moved rda files in beta.datavaalit.fi/storage/louhos and 
+  o added LoadData function
 
 CHANGES IN VERSION 0.1.73 (2012-07-09)
 
